--- a/styles.css
+++ b/styles.css
@@ -2,8 +2,12 @@ header {
     position: relative;
     text-align: center;
     padding-bottom: 5%;
+   
 }
 
+header > div {
+    background-color: #E6E6E6;
+}
 header > img {
     display: block;
     margin: 0 auto;
@@ -23,4 +27,29 @@ h2 {
     text-transform: uppercase; 
     font-family: "Times New Roman";
     text-align: center;
+}
+
+section li span {
+    font-style: italic;
+    font-weight: bold;
+}
+
+footer {
+    background-color: #005677;
+    color: white; 
+    font-family: "Times New Roman";
+    text-align: center;
+    padding: 20px; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+footer > span {
+    margin-right: 10px;
+}
+
+footer > img {
+    max-height: 20px;
+    margin-left: 10px;
 }
