--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 header {
     position: relative;
     text-align: center;
-    padding-bottom: 5%;
+    padding-bottom: 3%;
    
 }
 
@@ -19,6 +19,7 @@ h1 {
     text-transform: uppercase; 
     font-family: "Times New Roman";
     text-align: center;
+    letter-spacing: 15px
 }
 
 h2 {
